# GoIT_PyWeb_HW13

FastAPI_test/: pyproject.toml
FastAPI_test/src/repository/: contacts.py  users.py
FastAPI_test/src/routes/: auth.py  contacts.py  users.py
FastAPI_test/src/services/: auth.py  email.py
hw10_web/: pyproject.toml
hw10_web/project_quotes/: manage.py
hw10_web/project_quotes/app_quotes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hw10_web/project_quotes/app_quotes/migrations/: 0001_initial.py  0002_remove_quote_author_quote_author.py  0003_author_user_quote_user_tag_user_remove_quote_author_and_more.py
hw10_web/project_quotes/app_quotes/static/app_quotes/: style.css
hw10_web/project_quotes/app_quotes/templates/app_quotes/: about_author.html  author.html  base.html  index.html  quote.html  tag.html
hw10_web/project_quotes/app_quotes/templatetags/: extract_tags.py
hw10_web/project_quotes/project_quotes/: asgi.py  settings.py  urls.py  wsgi.py
hw10_web/project_quotes/users/: forms.py  urls.py  views.py
hw10_web/project_quotes/users/templates/users/: login.html  password_reset_complete.html  signup.html
